# CANdevStudio

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: icon.xml
android/res/values/: libs.xml  strings.xml
src/gui/: CMakeLists.txt
